Various spacing fixes.

--- a/app/webpacker/styles/blocks.scss
+++ b/app/webpacker/styles/blocks.scss
@@ -43,7 +43,7 @@ $space-between-sections: 3.7em;
     padding: 1em;
 
     @include mq($until: tablet) {
-      margin: 0 $indent-amount;
+      // margin: 0 $indent-amount;
     }
 
     h3 {
